# bullhorn

./: .env.example  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
src/: main.rs  nostr.rs  ntfy.rs
