[package]
description = "Simple nostr notification service."
edition = "2021"
license = "	AGPL-3.0-only"
name = "bullhorn"
repository = "https://github.com/w3irdrobot/bullhorn"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
config = { version = "0.14.0", default-features = false, features = [
  "async",
  "convert-case",
  "toml",
] }
dirs = "5.0.1"
dotenvy = "0.15.7"
env_logger = "0.11.5"
http = "1.1.0"
humantime = "2.1.0"
log = "0.4.22"
nostr-sdk = { version = "0.34.0", features = ["ndb"] }
qrcode = "0.14.1"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls",
  "http2",
] }
serde = "1.0.204"
tokio = { version = "1.39.2", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
  "time",
] }
tokio-util = { version = "0.7.11", features = ["rt"] }
uuid = { version = "1.10.0", features = ["v4"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
]

[workspace.metadata.release]
publish = false
